@@ -91,6 +91,64 @@
 	      </child>
 
 	      <child>
+		<widget class="GtkMenuItem" id="menu_edit">
+		  <property name="visible">True</property>
+		  <property name="stock_item">GNOMEUIINFO_MENU_EDIT_TREE</property>
+		  <signal name="activate" handler="on_menu_edit_activate" last_modification_time="Sun, 11 Sep 2005 09:35:25 GMT"/>
+
+		  <child>
+		    <widget class="GtkMenu" id="menu_edit_menu">
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menu_edit_cut">
+			  <property name="visible">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_CUT_ITEM</property>
+			  <signal name="activate" handler="on_menu_edit_cut_activate" last_modification_time="Sun, 11 Sep 2005 09:35:25 GMT"/>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menu_edit_copy">
+			  <property name="visible">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_COPY_ITEM</property>
+			  <signal name="activate" handler="on_menu_edit_copy_activate" last_modification_time="Sun, 11 Sep 2005 09:35:25 GMT"/>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menu_edit_paste">
+			  <property name="visible">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_PASTE_ITEM</property>
+			  <signal name="activate" handler="on_menu_edit_paste_activate" last_modification_time="Sun, 11 Sep 2005 09:35:25 GMT"/>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menu_edit_delete">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">_Delete</property>
+			  <property name="use_underline">True</property>
+			  <signal name="activate" handler="on_menu_edit_delete_activate" last_modification_time="Sun, 11 Sep 2005 10:16:56 GMT"/>
+
+			  <child internal-child="image">
+			    <widget class="GtkImage" id="image21">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-delete</property>
+			      <property name="icon_size">1</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+
+	      <child>
 		<widget class="GtkMenuItem" id="menu_view">
 		  <property name="visible">True</property>
 		  <property name="stock_item">GNOMEUIINFO_MENU_VIEW_TREE</property>
@@ -107,7 +165,7 @@
 			  <signal name="activate" handler="on_menu_view_previous_day_activate" last_modification_time="Sun, 11 Sep 2005 08:09:14 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image10">
+			    <widget class="GtkImage" id="image22">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-media-previous</property>
 			      <property name="icon_size">1</property>
@@ -128,7 +186,7 @@
 			  <signal name="activate" handler="on_menu_view_next_day_activate" last_modification_time="Sun, 11 Sep 2005 08:09:14 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image11">
+			    <widget class="GtkImage" id="image23">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-media-next</property>
 			      <property name="icon_size">1</property>
@@ -149,7 +207,7 @@
 			  <signal name="activate" handler="on_menu_view_today_activate" last_modification_time="Sun, 11 Sep 2005 08:41:52 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image12">
+			    <widget class="GtkImage" id="image24">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-jump-to</property>
 			      <property name="icon_size">1</property>
